--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,5 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "./sections/navbar/navbar.module.scss";
+@import "./sections/hero/hero.module.scss";
+@import "./sections/feature.jsx/feature.module.scss";
+@import "./sections/footer/footer.module.scss";
