icon is modified

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,3 +3,4 @@
 @import "./sections/hero/hero.module.scss";
 @import "./sections/feature.jsx/feature.module.scss";
 @import "./sections/footer/footer.module.scss";
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.css"
